# GAN

./: .gitignore  README.md  hello.py  pyproject.toml  vs_settings.txt
compressed_static/CACHE/: manifest.json
compressed_static/CACHE/css/: output.58340dbb75dc.css
compressed_static/CACHE/js/: output.1eb51e59ca19.js
config/: settings.py  urls.py
gan/: datasets.py  models.py  train.py  utils.py
pages/: forms.py  urls.py  views.py
pages/templates/: home.html
static/css/: base.css
static/js/: base.js
