[project]
name = "django-gan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.6",
    "django-compressor>=4.5.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=1.26.4,<2.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "requests==2.27.1",
    "tensorflow[and-cuda]==2.16.1",
    "tensorflow-datasets>=4.9.7",
    "transformers>=4.48.3",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
]
